# apps/core/internal/domain/auth/routes.go
@@ -14,6 +14,7 @@ func RegisterRoutes(r *gin.RouterGroup, cfg *config.Config) {
 	{
 		auth.POST("/register", handler.Register)
 		auth.POST("/login", handler.Login)
+		auth.POST("/refresh", handler.Refresh)
 		auth.POST("/forgot-password", handler.ForgotPassword)
 		auth.GET("/login/google", handler.GoogleLogin)
 		auth.GET("/callback/google", handler.GoogleCallback)
